--- a/index.html
+++ b/index.html
@@ -7,23 +7,48 @@
   </head>
   <body>
     <script src="./node_modules/ydf-training/dist/training.js"></script>
+    <script src="./node_modules/ydf-inference/dist/inference.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.0/jszip.min.js"></script>
-    <script src="index.js"></script>
-    <!-- <script>
-      YDFTraining()
-        .then((ydf) => fetch("http://localhost:5173/data.csv"))
-        .then(async (response) => {
-          const data = await response.text();
-          const task = "CLASSIFICATION";
-          const label = "label";
-          const model = new ydf.GradientBoostedTreesLearner(label, task).train(
-            data
-          );
-          const predictions = model.predict(data);
-          console.log(model.describe());
-          const modelAsZipBlob = await model.save();
-          model.unload();
-        });
+    <script>
+      YDFTraining().then(async (ydf) => {
+        const response = await fetch("http://localhost:5173/data.csv");
+        const data = await response.text();
+        const task = "CLASSIFICATION";
+        const label = "label";
+        const model = new ydf.GradientBoostedTreesLearner(label, task).train(
+          data
+        );
+        const predictions = model.predict(data);
+        console.log(model.describe());
+        console.log("predictions:", predictions);
+        const modelAsZipBlob = await model.save();
+        // saveModelAsZip(modelAsZipBlob);
+        model.unload();
+      });
+
+      function saveModelAsZip(blob, filename = "model.zip") {
+        const blobURL = URL.createObjectURL(blob);
+        const link = document.createElement("a");
+        link.href = blobURL;
+        link.download = filename;
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+        URL.revokeObjectURL(blobURL);
+      }
+    </script>
+    <!-- <script type="module">
+      const ydf = await YDFInference();
+      // don't need const data = fs.readFileSync('data.csv');
+      const zipFile = await fetch("http://localhost:5173/model.zip");
+      const zipBlob = await zipFile.blob();
+      const model = await ydf.loadModelFromZipBlob(zipBlob);
+      // instead of new ydf.GradientBoostedTreesLearner('Label', 'REGRESSION').train(data);
+      const predictions = model.predict({
+        Something: [10, 40, 50],
+      });
+      console.log("predictions:", predictions);
+      model.unload();
     </script> -->
   </body>
 </html>
